# terminology-service

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  fill_db.sql  load_sql.py  pyproject.toml  requirements.txt
api_v1/: admin.py  models.py  routes.py  serializers.py  urls.py
api_v1/migrations/: 0001_initial.py  0002_alter_handbook_options_alter_handbookelement_options_and_more.py
core/: settings.py  urls.py
tests/: test_api.py
